--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "module": "index.ts",
   "type": "module",
   "devDependencies": {
-    "@types/bun": "latest"
+    "@types/bun": "latest",
+    "drizzle-kit": "^0.20.14"
   },
   "scripts": {
     "dev": "tsx watch src/index.ts"
@@ -13,6 +14,9 @@
   },
   "dependencies": {
     "@types/node": "^20.12.7",
+    "dotenv": "^16.4.5",
+    "drizzle-orm": "^0.30.8",
+    "postgres": "^3.4.4",
     "tsx": "^4.7.2",
     "typescript": "^5.4.5"
   }
